--- a/home.html
+++ b/home.html
@@ -187,7 +187,7 @@
 <body>
   <main class="container" role="main" aria-label="Convite para aula gratuita ao vivo">
     <div class="foto-container" aria-label="Foto do Prof. Paulo Henrique">
-      <img src="C:\Users\ponte\OneDrive\Imagens\bannerlp.png" alt="Foto do Prof. Paulo Henrique" />
+      <img src="https://github.com/profpaulohenriquemaceio/aulagratuita/blob/main/bannerlp.png?raw=true" alt="Foto do Prof. Paulo Henrique" />
     </div>
 
     <h1>Convite Especial: Aula AO VIVO e Gratuita – 07/07 às 20h</h1>
