--- a/index.html
+++ b/index.html
@@ -136,13 +136,13 @@
   <div class="foto">
     <img src="https://github.com/profpaulohenriquemaceio/aulagratuita/blob/main/bannerlp.png?raw=true" alt="Foto do Prof. Paulo Henrique" />
   </div>
-    <h1>Aula AO VIVO – Mentoria Previdenciária</h1>
+    <h1>Aula AO VIVO e GRATUITA – Mentoria Previdenciária</h1>
     <p class="lead">
       No dia <strong>07/07 às 20h</strong>, participe da aula gratuita e veja na prática como transformar indeferimentos em concessões com segurança técnica e estratégia.
     </p>    <ul>
-      <li>Aprenda a interpretar e reverter indeferimentos com base jurídica sólida</li>
+      <li>Aprenda os primeiros passos da Advocacia Previdenciária</li>
       <li>Domine estratégias que aumentam sua autoridade e sua renda como advogado</li>
-      <li>Veja como a mentoria pode encurtar o caminho da teoria até os resultados reais</li>
+      <li>Descubra porque o Direito Previdenciário é a área mais lucrativa de todas</li>
     </ul>
     <form id="leadForm">
       <label for="email">Seu melhor e-mail:</label>
