--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
   </div>
     <h1>Aula AO VIVO e GRATUITA – Mentoria Previdenciária</h1>
     <p class="lead">
-      No dia <strong>07/07 às 20h</strong>, participe da aula gratuita e veja na prática como transformar indeferimentos em concessões com segurança técnica e estratégia.
+      No dia <strong>07/07 às 20h</strong>, participe da aula gratuita e veja na prática como transformar a sua carreira de advogado previdenciarista mesmo que você esteja no absoluto zero.
     </p>    <ul>
       <li>Aprenda os primeiros passos da Advocacia Previdenciária</li>
       <li>Domine estratégias que aumentam sua autoridade e sua renda como advogado</li>
