--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Aula Gratuita - Mentoria Previdenciária</title>
+  <title>Aula Gratuita - Prática Previdenciária</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@700&family=Inter:wght@400;600&display=swap');
     body {
@@ -136,7 +136,7 @@
   <div class="foto">
     <img src="https://github.com/profpaulohenriquemaceio/aulagratuita/blob/main/bannerlp.png?raw=true" alt="Foto do Prof. Paulo Henrique" />
   </div>
-    <h1>Aula AO VIVO e GRATUITA – Mentoria Previdenciária</h1>
+    <h1>Aula AO VIVO e GRATUITA – Prática Previdenciária</h1>
     <p class="lead">
       No dia <strong>07/07 às 20h</strong>, participe da aula gratuita e veja na prática como transformar a sua carreira de advogado previdenciarista mesmo que você esteja no absoluto zero.
     </p>    <ul>
